--- a/DjangoDir/MathHelpersApp/templates/index.html
+++ b/DjangoDir/MathHelpersApp/templates/index.html
@@ -1,8 +1,11 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Estimate Statistics</title>
+    <script src="{% static 'math_app/js/plot.js' %}"></script>
 </head>
 <body>
     <h1>Estimate Statistics</h1>
@@ -23,5 +26,4 @@
         <p>Standard deviation: {{ std_dev|floatformat:2 }}</p>
     {% endif %}
 </body>
-<script src="{% static 'math_app/js/plot.js' %}"></script>
 </html>
