add basic styles

--- a/DjangoDir/MathHelpersApp/templates/index.html
+++ b/DjangoDir/MathHelpersApp/templates/index.html
@@ -6,6 +6,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Estimate Statistics</title>
+  <link rel="stylesheet" href="{% static 'styles.css' %}">
 </head>
 
 <body>
