--- a/DjangoDir/MathHelpersApp/templates/index.html
+++ b/DjangoDir/MathHelpersApp/templates/index.html
@@ -13,7 +13,7 @@
   <h1>Estimate Statistics</h1>
   <form method="POST" action="{% url 'home' %}">
     {% csrf_token %}
-    <label for="data">Enter data (comma-separated):</label>
+    <label for="data">Enter data:</label>
     <input type="text" id="data" name="data" required>
     <br>
     <button type="submit">Calculate</button>
